# STRmie-HD

./: LICENSE  README.md  STRmie.yml  model_object.pk  pyproject.toml  searcHD.py  searcHD.yml  searcHD_env.yml  setup.py  test_strmie.py
docs/: case-study.html  conf.py  faq.html  faq.md  input-file-types.html  installation.html  installation.md  objects.inv  operational-modes.html  outputs.html  requirements.txt  search.html  searchindex.js  usage.html
docs/_build/: genindex.html  index.html  installation.html  outputs.html  usage.html
docs/_build/_sources/: case-study.md.txt  usage.md.txt
docs/_sources/: case-study.md.txt  index.md.txt  input-file-types.md.txt  installation.md.txt  operational-modes.md.txt  outputs.md.txt  usage.md.txt
pytest_STRmie/: test_strmie.py
pytest_STRmie/output_file/: report.html
pytest_STRmie/output_file/raw_counts/: reduced_penetrance_17_38_LOICCA.fastq.gz.csv
strmie/: main.py
strmie/pytest_STRmie/expected_results/: Final_report_expected.xlsx
strmie/pytest_STRmie/output_file/: indices_calculation.xlsx
strmie/pytest_STRmie/output_file/raw_counts/: full_penetrance_22_48_LOI.fastq.gz.csv  healthy_15_25_NOLOI.fastq.gz.csv
strmie/scripts/: cnn.py  custom_transformers.py  fully_conv_NN.py  generatefastq.py  html_generator.py  indices.py  pattern.py  peaks.py  utility.py
tests/: test_strmie.py
tests/input_file/: CAG_data_for_recalculating_indices.xlsx
tests/output_file/: report_0.xlsx
tests/output_file/raw_counts/: intermediate_16_31_DOI.fastq.gz.csv
