[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strmie"
version = "0.1.0"
description = "Tool per l'analisi di sequenze STR in ambito mitocondriale"
authors = [
    { name="Alessandro" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scikit-learn",
    "tensorflow",
    "matplotlib",
    "pandas"
]

[project.scripts]
strmie = "strmie.main:main"
